CLDR-15371 Fix broken links, wrap long URLs (#3005)
-In the Info Panel, wrap links with long URLs to avoid horizontal scrollbar

-Apply the style word-wrap: break-word to a[href] within class sidebyside-narrow

--- a/tools/cldr-apps/src/main/webapp/surveytool.css
+++ b/tools/cldr-apps/src/main/webapp/surveytool.css
@@ -3322,3 +3322,7 @@ div.thinUser {
      color: red;
      background-color: lightgoldenrodyellow !important;
  }
+
+.sidebyside-narrow a[href] {
+	word-wrap: break-word;
+}
